--- a/snake/p-bulle-snake-step1-start/index.html
+++ b/snake/p-bulle-snake-step1-start/index.html
@@ -20,6 +20,7 @@
     </style>
   </head>
   <body>
+    <div></div>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
     <script type="module" src="./src/main.js"></script>
   </body>
