--- a/snake/p-bulle-snake-step1-start/index.html
+++ b/snake/p-bulle-snake-step1-start/index.html
@@ -14,6 +14,9 @@
         margin: 0;
         background-color: #f0f0f0;
       }
+      .d-none {
+        display: none;
+      }
       canvas {
         border: 2px solid #000;
         background-color: #fff;
@@ -27,7 +30,7 @@
   <body>
     <div></div>
     <canvas id="gameCanvas" width="400" height="400"></canvas>
-    <div id = "gameOver"></div>
+    <button id = 'replay' class="d-none">play again</button>
     <script type="module" src="./src/main.js"></script>
   </body>
 </html>
