--- a/snake/p-bulle-snake-step1-start/index.html
+++ b/snake/p-bulle-snake-step1-start/index.html
@@ -21,9 +21,8 @@
         border: 2px solid #000;
         background-color: #fff;
       }
-      #gameOver {
+      #replay {
         position: absolute;
-        
       }
     </style>
   </head>
